# xfbench

./: Cargo.toml
config/: tables.toml
crates/core/: Cargo.toml
crates/core/examples/: query.rs  server.rs
