[workspace]
resolver = "3"
members = ["crates/core"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"

