[workspace]
resolver = "3"
members = ["crates/core"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
datafusion = "53.1.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
arrow-flight = { version = "58.3.0", features = ["flight-sql"] }
tonic = "0.14.6"
prost = "0.14.3"
futures = "0.3.32"
futures-util = "0.3.32"
