[package]
name = "xfbench-core"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
datafusion.workspace = true
tokio.workspace = true
arrow-flight.workspace = true
tonic.workspace = true
prost.workspace = true
futures.workspace = true
futures-util.workspace = true
